--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<li> <a href="https://gavinstone020.github.io/Green-Pastures-2/"> Home </a>   </li>
 		<li> <a href="https://gavinstone020.github.io/Green-Pastures-2/training"> Training </a> </li>   
 		<li> <a href="https://gavinstone020.github.io/Green-Pastures-2/board"> Board </a>  </li>
-		<li> <a href="https://gavinstone020.github.io/Green-Pastures-2/contact"> Contact <div>Us</div> </a> </li> 
+		<li> <a href="https://gavinstone020.github.io/Green-Pastures-2/contact"> Contact Us </a> </li> 
 		</ul>
 		</nav>
 		<div id="homeImage">
