--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 				<title>index</title>
 				<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 				<meta charset="utf-8">
-				<link rel="stylesheet" type="text/css" href="GPST-backup.css">
+				<link rel="stylesheet" type="text/css" href="GPST.css">
 				<link rel="icon" type="image/x-icon" href="https://gavinstone020.github.io/Green-Pastures/favicon.ico" >
 		</head>
 		<body>
