--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
 		</header>
 		<nav>
 		<ul>
-		<a href="https://gavinstone020.github.io/Green-Pastures-2/"> Home </a>   
-		<a href="https://gavinstone020.github.io/Green-Pastures-2/training"> Training </a>    
-		<a href="https://gavinstone020.github.io/Green-Pastures-2/board"> Board </a>  
-		<a href="https://gavinstone020.github.io/Green-Pastures-2/contact"> Contact <div>Us</div> </a>  
+		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/"> Home </a>   </li>
+		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/training"> Training </a> </li>   
+		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/board"> Board </a>  </li>
+		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/contact"> Contact <div>Us</div> </a> </li>  
 		</ul>
 		</nav>
 		<h2> Contact </h2>
