--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/"> Home </a>   </li>
 		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/training"> Training </a> </li>   
 		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/board"> Board </a>  </li>
-		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/contact"> Contact <div>Us</div> </a> </li>  
+		<li> <a href="https://gavinstone020.github.io/Green-Pastures-5/contact"> Contact Us</a> </li>
 		</ul>
 		</nav>
 		<div id="homeImage">
